# universal-article-reader

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  README.zh-CN.md  UNIVERSAL_READER.md  pyproject.toml  verify_implementation.py
.trae/specs/my-mcp-server/: read_wechat_article.json
scripts/: read_wechat_cli.py
skill/: README.md  SKILL.md
skill/references/: supported_sites.md
skill/scripts/: read_article.py
src/mcp_server_my_mcp_server/: __init__.py  cli.py  fastmcp_server.py  server.py
src/mcp_server_my_mcp_server/adapters/: __init__.py  base.py  cnblogs.py  csdn.py  generic.py  jianshu.py  juejin.py  medium.py  wechat.py  zhihu.py
src/mcp_server_my_mcp_server/tools/: __init__.py  read_article.py  read_wechat_article.py
src/mcp_server_my_mcp_server/utils/: __init__.py  browser_fetch.py  cache.py  compliance.py  config.py  http_fetch.py  markdown.py  observability.py  parser.py  rate_limit.py
tests/: test_read_article.py  test_read_wechat_article.py
tests/fixtures/: sample_wechat.html
tests/test_adapters/: test_generic_adapter.py  test_registry.py  test_wechat_adapter.py
